[gd_scene load_steps=25 format=3 uid="uid://i1quic2io8g6"]

[ext_resource type="PackedScene" uid="uid://dm2rkj7a7abmx" path="res://scenes/player.tscn" id="1_84olp"]
[ext_resource type="Texture2D" uid="uid://cde8628garqoi" path="res://assets/backgrounds/backdrop.jpeg" id="1_ebjrb"]
[ext_resource type="Texture2D" uid="uid://e1jd07a3xn05" path="res://assets/backgrounds/room_floor.png" id="1_frdl4"]
[ext_resource type="Shader" path="res://shaders/ripples.gdshader" id="1_ih8q5"]
[ext_resource type="Script" path="res://scripts/apartment.gd" id="1_udb5f"]
[ext_resource type="Texture2D" uid="uid://bhqed1l3o6k3e" path="res://assets/backgrounds/room_wall1.png" id="2_0mfw8"]
[ext_resource type="Texture2D" uid="uid://ch5dtewaq6nkl" path="res://assets/backgrounds/backwall_room.png" id="3_evmdf"]
[ext_resource type="PackedScene" uid="uid://ccx3p7phd2qb2" path="res://scenes/Items/ball.tscn" id="4_1ohl8"]
[ext_resource type="PackedScene" uid="uid://b5a60wk0y08ww" path="res://components/see_through_component/see_through_component.tscn" id="4_j0ya2"]
[ext_resource type="PackedScene" uid="uid://rlg3fvmpq5ip" path="res://scenes/Items/motivation.tscn" id="4_pmqfa"]
[ext_resource type="Script" path="res://scripts/items/y_sort_daemon.gd" id="5_mmfak"]
[ext_resource type="PackedScene" uid="uid://bjta7ifyqvo6h" path="res://scenes/Items/door.tscn" id="7_3u05v"]
[ext_resource type="PackedScene" uid="uid://bifsn2v6kivk6" path="res://scenes/Items/non_interactable/night_stand.tscn" id="10_c4eci"]
[ext_resource type="PackedScene" uid="uid://cc2wlfoad2h3l" path="res://scenes/spawn_point.tscn" id="11_122io"]
[ext_resource type="PackedScene" uid="uid://4wblpk02j8lk" path="res://scenes/Items/non_interactable/bed.tscn" id="11_s5xvo"]
[ext_resource type="PackedScene" uid="uid://cwvvihpuwp08i" path="res://scenes/Items/non_interactable/couch.tscn" id="12_l36o1"]
[ext_resource type="PackedScene" uid="uid://c0n5350pphtjc" path="res://scenes/Items/non_interactable/hall_table.tscn" id="13_g8iod"]
[ext_resource type="Texture2D" uid="uid://bnq1dfmrfts7" path="res://assets/Portrait.png" id="13_h7gq1"]
[ext_resource type="Texture2D" uid="uid://cejb6aabg3n3g" path="res://assets/Untitled2_20250223114326.png" id="14_wo1vi"]
[ext_resource type="Script" path="res://scripts/cheat-manager/cheat_manager.gd" id="20_1c652"]
[ext_resource type="Script" path="res://scripts/cheat-manager/indicator_light.gd" id="21_aq4aw"]
[ext_resource type="Script" path="res://scripts/god-prophet/apartment_prophet.gd" id="21_i8xe5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_raux7"]
shader = ExtResource("1_ih8q5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5g85i"]
size = Vector2(1306.46, 46)

[node name="Apartment" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_udb5f")

[node name="Backdrop" type="Sprite2D" parent="."]
z_index = -10
material = SubResource("ShaderMaterial_raux7")
position = Vector2(557, 310)
scale = Vector2(2, 2)
texture = ExtResource("1_ebjrb")

[node name="WallCollisions" type="Node2D" parent="."]

[node name="Wall3" type="StaticBody2D" parent="WallCollisions"]
position = Vector2(51, 82)
rotation = 2.56258

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallCollisions/Wall3"]
shape = SubResource("RectangleShape2D_5g85i")

[node name="Wall2" type="StaticBody2D" parent="WallCollisions"]
position = Vector2(1094, 755)
rotation = 2.56042

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallCollisions/Wall2"]
position = Vector2(34.6698, 0.0405588)
shape = SubResource("RectangleShape2D_5g85i")

[node name="Wall" type="StaticBody2D" parent="WallCollisions"]
position = Vector2(27, 767)
rotation = -2.56363

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallCollisions/Wall"]
position = Vector2(-24.8007, -6.10352e-05)
shape = SubResource("RectangleShape2D_5g85i")

[node name="Wall4" type="StaticBody2D" parent="WallCollisions"]
position = Vector2(1047, 79.0001)
rotation = 3.71613

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallCollisions/Wall4"]
shape = SubResource("RectangleShape2D_5g85i")

[node name="BuildingBackground" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="BuildingBackground"]
z_index = -1
position = Vector2(558, 335)
texture = ExtResource("1_frdl4")

[node name="Wall2" type="Sprite2D" parent="BuildingBackground"]
z_index = -2
position = Vector2(557, 340)
texture = ExtResource("3_evmdf")

[node name="Wall" type="Sprite2D" parent="BuildingBackground"]
z_index = 100
position = Vector2(558, 340)
texture = ExtResource("2_0mfw8")

[node name="SeeThroughComponent" parent="BuildingBackground/Wall" node_paths=PackedStringArray("sprite") instance=ExtResource("4_j0ya2")]
sprite = NodePath("..")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BuildingBackground/Wall/SeeThroughComponent"]
position = Vector2(-13, 616)
polygon = PackedVector2Array(5, -51, 985, -691, 989, -511, 5, 125, -983, -516, -982, -683)

[node name="NonInteractbableObjects" type="Node2D" parent="."]

[node name="Portrait" type="Sprite2D" parent="NonInteractbableObjects"]
position = Vector2(-192, 166)
scale = Vector2(0.09, 0.09)
texture = ExtResource("13_h7gq1")

[node name="Untitled220250223114326" type="Sprite2D" parent="NonInteractbableObjects"]
position = Vector2(304, 550)
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_wo1vi")

[node name="NightStand" parent="NonInteractbableObjects" instance=ExtResource("10_c4eci")]

[node name="Bed" parent="NonInteractbableObjects" instance=ExtResource("11_s5xvo")]

[node name="Couch" parent="NonInteractbableObjects" instance=ExtResource("12_l36o1")]

[node name="HallTable" parent="NonInteractbableObjects" instance=ExtResource("13_g8iod")]

[node name="InteractableItems" type="Node2D" parent="."]

[node name="Ball" parent="InteractableItems" instance=ExtResource("4_1ohl8")]
position = Vector2(1153, 369)
scale = Vector2(0.3, 0.291)

[node name="Door" parent="InteractableItems" instance=ExtResource("7_3u05v")]
z_index = 101
position = Vector2(1314, 490)
destination_room = 1
destination_spawn_point = "SpawnApartmentDoor"

[node name="Door1" parent="InteractableItems" instance=ExtResource("7_3u05v")]
z_index = -1
position = Vector2(-41, 90)
scale = Vector2(0.9, 0.9)
destination_room = 2
destination_spawn_point = "SpawnApartmentDoor"

[node name="Player" parent="." instance=ExtResource("1_84olp")]
position = Vector2(241, 201)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.8, 0.8)

[node name="Motivation" parent="." instance=ExtResource("4_pmqfa")]
visible = false
z_index = -1

[node name="YSortDaemon" type="Node" parent="." node_paths=PackedStringArray("y_sort_root")]
script = ExtResource("5_mmfak")
y_sort_root = [NodePath("../InteractableItems"), NodePath("../NonInteractbableObjects"), NodePath("../Player")]

[node name="SpawnStart" parent="." instance=ExtResource("11_122io")]
position = Vector2(931, 198)

[node name="SpawnKitchenDoor" parent="." instance=ExtResource("11_122io")]
position = Vector2(31, 233)

[node name="SpawnHallwayDoor" parent="." instance=ExtResource("11_122io")]
position = Vector2(1208, 492)

[node name="CheatManager" type="Node2D" parent="."]
script = ExtResource("20_1c652")

[node name="CanvasLayer" type="CanvasLayer" parent="CheatManager"]

[node name="ColorRect" type="ColorRect" parent="CheatManager/CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -65.0
offset_top = 19.0
offset_right = -25.0
offset_bottom = 59.0
grow_horizontal = 0
script = ExtResource("21_aq4aw")

[node name="ApartmentProphet" type="Node2D" parent="." node_paths=PackedStringArray("ballNode")]
script = ExtResource("21_i8xe5")
ballNode = NodePath("../InteractableItems/Ball")

[connection signal="cheat_activated" from="CheatManager" to="ApartmentProphet" method="_on_cheat_manager_cheat_activated"]
[connection signal="cheat_state_changed" from="CheatManager" to="CheatManager/CanvasLayer/ColorRect" method="_on_cheat_manager_cheat_state_changed"]

[editable path="InteractableItems/Ball"]
[editable path="InteractableItems/Ball/Item"]
